# calltree-poetry-plugins

example-project/: pyproject.toml
poetry-codeartifact-resolver/: README.md  configure-codeartifact.sh  publish-to-codeartifact.sh  publish.sh  pyproject.toml
poetry-codeartifact-resolver/src/poetry_codeartifact_resolver/: __init__.py  plugin.py
poetry-local-resolver/: .env.example  LICENSE  README.md  publish-to-codeartifact.sh  pyproject.toml
poetry-local-resolver/src/poetry_local_resolver/: __init__.py  plugin.py
